--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-stone-50 text-neutral-950 min-h-fit h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
